# 1password-tool

./: README.md  cli  main.py  pyproject.toml
src/: cli.py  onepassword.py  secret.py  ssh.py
templates/: test.yaml
