[tool.poetry]
name = "1password-tool"
version = "0.0.1"
description = ""
authors = ["Rom3dius <r@romedius.xyz>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pyonepassword = "^3.7.1"
paramiko = "^3.0.0"
kubernetes = "^26.1.0"
click = "^8.1.3"

[tool.poetry.plugins."console_scripts"]
1password-tool = "src.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
